# financial-advisory-agentic-system

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  pytest.ini
backend/.deepeval/: .deepeval_telemetry.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/agents/: advisor_copilot.py  document_intelligence.py  error_handler.py  graph.py  intake.py  intent_classifier.py  profile_builder.py  risk_assessment.py  scoring.py  state.py  strategy.py  supervisor.py
backend/app/api/v1/: documents.py  health.py  messages.py  sessions.py
backend/app/db/: mongo.py  redis_client.py
backend/app/guardrails/: input_guard.py  output_guard.py
backend/app/llm/: client.py
backend/app/market_data/: alpha_vantage_client.py  cache.py  fred_client.py  yfinance_client.py
backend/app/models/: document_chunk.py  session.py
backend/app/observability/: langfuse_setup.py
backend/app/rag/: retriever.py
backend/evals/: conftest.py  setup_langfuse_datasets.py  test_advisor_copilot.py  test_e2e.py  test_guardrails.py  test_intake_extraction.py  test_intent_classifier.py  test_market_data.py  test_node_integration.py  test_profile_builder.py  test_rag_retrieval.py  test_risk_agent.py  test_supervisor.py
backend/evals/fixtures/: advisor_test_cases.json  intake_test_cases.json  rag_test_cases.json  sample_portfolio.json
backend/scripts/: seed_kb.py
docs/: agents.md  api.md  architecture.md  evals.md  frontend.md  market-data.md  observability.md  rag.md  setup.md
(+45 files in other folders)
