[project]
name = "financial-advisor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "motor>=3.6.0",
    "redis[asyncio]>=5.2.0",
    "openai>=1.56.0",
    "langchain-openai>=0.3.0",
    "fastembed>=0.4.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyportfolioopt>=1.5.5",
    "sse-starlette>=2.1.0",
    "langfuse>=3.0.0",
    "pypdf>=4.3.0",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.3.1",
    "cryptography>=48.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "deepeval>=1.4.0",
    "httpx>=0.28.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=0.9",
]
